- Matroid Theory - J Urrutia

--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -100,7 +100,7 @@
                                     <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-4">
                                             <div class="well">
-                                                <h4><a href="{{ app.request.basepath }}/sessions/matroid-theory">Matroid Theory</a></h4>
+                                                <h4><a href="http://gaspacho.matmor.unam.mx/special-sessions/session/matroid-theory">Matroid Theory</a></h4>
                                                 {#Room 1#}
                                             </div>
                                         </div>
@@ -293,7 +293,7 @@
                                     <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-4">
                                             <div class="well">
-                                                <h4><a href="{{ app.request.basepath }}/sessions/matroid-theory">Matroid Theory</a></h4>
+                                                <h4><a href="http://gaspacho.matmor.unam.mx/special-sessions/session/matroid-theory">Matroid Theory</a></h4>
                                                 {#Room 5#}
                                             </div>
                                         </div>
@@ -802,7 +802,8 @@
                 <div role="tabpanel" class="tab-pane" id="social"></div>
                 <div role="tabpanel" class="tab-pane table-responsive" id="special">
 
-                    <div class="special-session-a" ><strong><a href="{{ app.request.basepath }}/sessions/matroid-theory">Matroid Theory</a></strong><br>
+                    {#<div class="special-session-a" ><strong><a href="{{ app.request.basepath }}/sessions/matroid-theory">Matroid Theory</a></strong><br>#}
+                    <div class="special-session-a" ><strong><a href="http://gaspacho.matmor.unam.mx/special-sessions/session/matroid-theory">Matroid Theory</a></strong><br>
                         <small>
                         Carolyn Chun, US Naval Academy, 121 Blake Rd, Annapolis, MD 21402, United States. E-mail: chchchun<i class="fa fa-at" aria-hidden="true"></i>gmail.com.<br>
                         Criel Merino, UNAM, León 2, altos, centro 68000, Oaxaca, Oax., México. Email: merino<i class="fa fa-at" aria-hidden="true"></i>matem.unam.mx, main contact organizer.<br>
