--- a/views/speakers.html.twig
+++ b/views/speakers.html.twig
@@ -215,19 +215,36 @@
                 </div>
             </div>
         </div>
-        <h1></h1>
+
+        <div class="page-header prima-title">Public Lecture</div>
         <div class="row">
+            {#<div class="col-md-6">#}
+                {#<div class="media">#}
+                    {#<div class="media-left media-top">#}
+                        {#<a href="#">#}
+                            {#<img class="media-object" src="img/speakers/Maryam-Mirzajani.jpg" class="img-responsive img-thumbnail">#}
+                        {#</a>#}
+                    {#</div>#}
+                    {#<div class="media-body plenary">#}
+                        {#<h4 class="media-heading"><a href="">Maryam Mirzakhani </a></h4>#}
+                        {#<p>Stanford</p>#}
+                        {#<p><small><em>Teichmuller theory, hyperbolic geometry</em></small></p>#}
+                        {#<p>#}
+                        {#</p>#}
+                    {#</div>#}
+                {#</div>#}
+            {#</div>#}
             <div class="col-md-6">
                 <div class="media">
                     <div class="media-left media-top">
                         <a href="#">
-                            <img class="media-object" src="img/speakers/Maryam-Mirzajani.jpg" class="img-responsive img-thumbnail">
+                            <img class="media-object" src="img/speakers/Jaime-Urrutia.png" class="img-responsive img-thumbnail">
                         </a>
                     </div>
                     <div class="media-body plenary">
-                        <h4 class="media-heading"><a href="">Maryam Mirzakhani </a></h4>
-                        <p>Stanford</p>
-                        <p><small><em>Teichmuller theory, hyperbolic geometry</em></small></p>
+                        <h4 class="media-heading"><a href="http://biosci3.ucdavis.edu/Faculty/Profile/View/14487 ">Jaime Urrutia Fucugauch</a></h4>
+                        <p>Instituto de Geofísica de la UNAM</p>
+                        <p><small><em>Geophysics</em></small></p>
                         <p>
                         </p>
                     </div>
