Modificacion para sesion Poisson

--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -905,7 +905,7 @@
                     </br>
 
                     <div class="special-session-b"><strong><a href="http://gaspacho.matmor.unam.mx/special-sessions/session/poisson-geometry-and-Its-applications">Poisson Geometry and Its Applications</a></strong><br>
-                        <small>Misael Avendaño (UNISON), Matias del Hoyo (IMPA), Rui Loja Fernandes (U. Illinois-Urbana), Yuri Vorobiev (U. de Sonora)</small> <br>
+                        <small>Misael Avendaño (UNISON), Matias del Hoyo (UFF), Rui Loja Fernandes (U. Illinois-Urbana), Yuri Vorobiev (UNISON)</small> <br>
                         <small>misaelave<i class="fa fa-at" aria-hidden="true"></i>mat.uson.mx</small><br>
                     </div>
                     </br>
