Sedes de los eventos

--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -25,6 +25,17 @@
             <div class="tab-content prima-program">
                 <div role="tabpanel" class="tab-pane active table-responsive" id="general">
 
+                    <p>
+                        <i class="fa fa-map-marker" aria-hidden="true"></i> Plenary Lecture PL1 & Public Lecture <strong>Monday 14</strong>: Macedonio Alcala Theater
+                    </p>
+                    <p>
+                        <i class="fa fa-map-marker" aria-hidden="true"></i> Plenary Lectures PL2 to PL13 <strong>Tuesday to Friday</strong>: Hotel Fortin Plaza
+                    </p>
+                    <p><i class="fa fa-map-marker" aria-hidden="true"></i> All Special Sessions <strong>Monday to Friday</strong>: Instituto Tecnológico de Oaxaca<br>
+                        Ing. Sistemas Computacionales Building 1
+                    </p>
+                    <br>
+
                     <!-- Nav tabs -->
                     <ul class="nav nav-pills nav-justified" role="tablist">
                         <li role="presentation" class="active"><a href="#sunday" aria-controls="sunday" role="tab" data-toggle="pill">Sunday 13</a></li>
@@ -41,7 +52,15 @@
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>15:00-19:30</strong></div>
                                 <div class="panel-body">
-                                    <h4>REGISTRATION AND WELCOME RECEPTION</h4>
+                                    <h4>REGISTRATION</h4>
+                                    <i class="fa fa-map-marker" aria-hidden="true"></i> Hotel Fortin Plaza<br><br>
+                                </div>
+                            </div>
+                            <div class="panel panel-timeline text-center">
+                                <div class="panel-heading"><strong>18:00-20:00</strong></div>
+                                <div class="panel-body">
+                                    <h4>WELCOME RECEPTION</h4>
+                                    <i class="fa fa-map-marker" aria-hidden="true"></i> Presidencia Municipal<br><br>
                                 </div>
                             </div>
                         </div>
@@ -52,6 +71,7 @@
                                 <div class="panel-heading"><strong>09:00-10:00</strong></div>
                                 <div class="panel-body">
                                     <h4>INAUGURAL CEREMONY</h4>
+                                    <i class="fa fa-map-marker" aria-hidden="true"></i> Macedonio Alcala Theater<br>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
@@ -77,12 +97,16 @@
                                             to topics like minimal model program, Kahler-Einstein metric etc.
                                         </div>
                                     </div>
+                                    <br><br>
+                                    <i class="fa fa-map-marker" aria-hidden="true"></i> Macedonio Alcala Theater<br>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
                                 <div class="panel-heading"><strong>11:15-12:15</strong></div>
                                 <div class="panel-body">
                                     <h4>Jaime Urrutia Fucugauchi<br> <small class="text-muted">Public Lecture</small></h4>
+                                    <br>
+                                    <i class="fa fa-map-marker" aria-hidden="true"></i> Macedonio Alcala Theater<br>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
@@ -95,6 +119,9 @@
                                 <div class="panel-heading"><strong>15:00-19:30</strong></div>
                                 <div class="panel-body">
                                     <h3>Special Sessions Group 1</h3>
+                                    <p><i class="fa fa-map-marker" aria-hidden="true"></i> Instituto Tecnológico de Oaxaca<br>
+                                        Ing. Sistemas Computacionales Building 1
+                                    </p>
                                     <p>Coffee Break From 17:00 to 17:30</p>
                                     <br>
                                     <div class="row row-flex row-flex-wrap">
@@ -288,6 +315,9 @@
                                 <div class="panel-heading"><strong>15:00-19:30</strong></div>
                                 <div class="panel-body">
                                     <h3>Special Sessions Group 1</h3>
+                                    <p><i class="fa fa-map-marker" aria-hidden="true"></i> Instituto Tecnológico de Oaxaca<br>
+                                        Ing. Sistemas Computacionales Building 1
+                                    </p>
                                     <p>Coffee Break From 17:00 to 17:30</p>
                                     <br>
                                     <div class="row row-flex row-flex-wrap">
@@ -379,6 +409,8 @@
                                     <a data-toggle="collapse" href="#mVazquezPL" aria-expanded="false" aria-controls="mVazquezPL">
                                         <strong>Conectando y reconectando: un enlace entre las matemáticas, la física y el ADN</strong>
                                     </a>
+                                    <br><br>
+                                    <p><i class="fa fa-map-marker" aria-hidden="true"></i>  Panhuelito Garden (Pañuelito)</p>
                                     <div class="collapse" id="mVazquezPL">
                                         <div class="well text-left">
                                              ¿Qué tienen en común los aros de humo y las molecular circulares de ADN?
@@ -469,6 +501,7 @@
                                 <div class="panel-heading"><strong>20:00-</strong></div>
                                 <div class="panel-body">
                                     <h4>Banquet</h4>
+                                    <i class="fa fa-map-marker" aria-hidden="true"></i> Hotel Quinta Real<br>
                                 </div>
                             </div>
                         </div>
@@ -559,6 +592,9 @@
                                 <div class="panel-heading"><strong>15:00-19:30</strong></div>
                                 <div class="panel-body">
                                     <h3>Special Sessions Group 2</h3>
+                                    <p><i class="fa fa-map-marker" aria-hidden="true"></i> Instituto Tecnológico de Oaxaca<br>
+                                        Ing. Sistemas Computacionales Building 1
+                                    </p>
                                     <p>Coffee Break from 17:00 to 17:30 </p><br>
                                     <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-4">
@@ -683,6 +719,20 @@
                                 <div class="panel-body">
                                     <h4>Alexey Bondal
                                         <br><small class="text-muted">Plenary Lecture PL 12</small></h4>
+                                    <a data-toggle="collapse" href="#aBondal" aria-expanded="false" aria-controls="aBondal">
+                                        <strong>Categories and functors in Algebraic Geometry</strong>
+                                    </a>
+                                    <div class="collapse" id="aBondal">
+                                        <div class="well text-left">
+                                            The lecture is devoted to categorical aspects of Algebraic Geometry. This is about description of the derived categories of coherent sheaves on algebraic varieties and their behavior under various geometric operations, especially those appearing in the Minimal Model Program of Birational Geometry.
+                                            <br><br>
+                                            A description of general (enhanced) triangulated categories via generators will be given with emphasizing the role of exceptional collections and tilting generators. Then  a description of the derived categories of toric varieties via perverse (topological) sheaves on stratified spaces will be outlined. A motivation from Mirror Symmetry will be presented.
+                                            <br><br>
+                                            The role of the relative canonical class in constructing tilting relative generators will be illustrated on the class of birational morphisms between smooth varieties with dimension of fibers bounded by 1.
+                                            <br><br>
+                                            A homotopical viewpoint on the algebra of functors via categorification of perverse sheaves on stratified spaces will be discussed. Current results and conjectures on its relevance to birational transformations, such as flops, will be presented.
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="panel panel-timeline text-center">
@@ -714,6 +764,9 @@
                                 <div class="panel-heading"><strong>15:00-19:30</strong></div>
                                 <div class="panel-body">
                                     <h3>Special Sessions Group 2</h3>
+                                    <p><i class="fa fa-map-marker" aria-hidden="true"></i> Instituto Tecnológico de Oaxaca<br>
+                                        Ing. Sistemas Computacionales Building 1
+                                    </p>
                                     <p>Coffee Break from 17:00 to 17:30 </p><br>
                                     <div class="row row-flex row-flex-wrap">
                                         <div class="col-md-4">
@@ -795,7 +848,24 @@
                         </div>
                     </div>
                 </div>
-                <div role="tabpanel" class="tab-pane" id="social"></div>
+                <div role="tabpanel" class="tab-pane" id="social">
+                    <div class="panel panel-timeline text-center">
+                        <div class="panel-heading"><strong>Sunday 13th</strong></div>
+                        <div class="panel-body">
+                            <h4>Welcome Reception</h4>
+                            <strong>18:00-20:00</strong><br>
+                            <p><i class="fa fa-map-marker" aria-hidden="true"></i> Palacio Municipal de Oaxaca<br><br></p>
+                        </div>
+                    </div>
+                    <div class="panel panel-timeline text-center">
+                        <div class="panel-heading"><strong>Wednesday 16th</strong></div>
+                        <div class="panel-body">
+                            <h4>Banquet</h4>
+                            <strong>20:00</strong>
+                            <p><i class="fa fa-map-marker" aria-hidden="true"></i> Quinta Real Hotel<br><br></p>
+                        </div>
+                    </div>
+                </div>
                 <div role="tabpanel" class="tab-pane table-responsive" id="special">
 
                     {#<div class="special-session-a" ><strong><a href="{{ app.request.basepath }}/sessions/matroid-theory">Matroid Theory</a></strong><br>#}
