Duplicar speaker Maribel Vazquez

--- a/views/speakers.html.twig
+++ b/views/speakers.html.twig
@@ -215,6 +215,25 @@
                 </div>
             </div>
         </div>
+        <h1></h1>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="media">
+                    <div class="media-left media-top">
+                        <a href="#">
+                            <img class="media-object" src="img/speakers/Mariel-Vazquez.png" class="img-responsive img-thumbnail">
+                        </a>
+                    </div>
+                    <div class="media-body plenary">
+                        <h4 class="media-heading"><a href="http://biosci3.ucdavis.edu/Faculty/Profile/View/14487 "> Mariel Vazquez  </a></h4>
+                        <p>UC-Davis</p>
+                        <p><small><em>Mathematical Biology </em></small></p>
+                        <p>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <div class="page-header prima-title">Public Lecture</div>
         <div class="row">
