--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -139,6 +139,40 @@
 #}
       {#  <div class="page-header text-center"><h2>Organizing Committee<h2> </div>#}
 
+        <!-- Button trigger modal -->
+        <p class="text-center">
+            <br>
+        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
+            Rooming list is now available
+        </button>
+        </p>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Rooming list</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <a href="http://gaspacho.matmor.unam.mx/prima/roominglist/PRIMA-HotelAngelInn.pdf" target="_blank">Hotel Angel Inn</a><br>
+                        <a href="http://gaspacho.matmor.unam.mx/prima/roominglist/PRIMA-HotelFortin .pdf" target="_blank">Hotel Fortin</a><br>
+                        <a href="http://gaspacho.matmor.unam.mx/prima/roominglist/PRIMA-HotelMision.pdf" target="_blank">Hotel Mision</a><br>
+                        <a href="http://gaspacho.matmor.unam.mx/prima/roominglist/PRIMA-HotelVictoria.pdf" target="_blank">Hotel Victoria</a>
+
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
         <div class="page-header text-center"><h2>Organizing Committee<h2> </div>
         <div class="col-10 col-centered hidden-xs text-center">
 
