--- a/views/home.html.twig
+++ b/views/home.html.twig
@@ -159,6 +159,7 @@
                     </div>
                     <div class="modal-body">
                         <a href="http://gaspacho.matmor.unam.mx/prima/roominglist/PRIMA-HotelAngelInn.pdf" target="_blank">Hotel Angel Inn</a><br>
+                        <a href="http://gaspacho.matmor.unam.mx/prima/roominglist/PRIMA-HotelConzzatti.pdf" target="_blank">Hotel Casa Conzzatti</a><br>
                         <a href="http://gaspacho.matmor.unam.mx/prima/roominglist/PRIMA-HotelFortin .pdf" target="_blank">Hotel Fortin</a><br>
                         <a href="http://gaspacho.matmor.unam.mx/prima/roominglist/PRIMA-HotelMision.pdf" target="_blank">Hotel Mision</a><br>
                         <a href="http://gaspacho.matmor.unam.mx/prima/roominglist/PRIMA-HotelVictoria.pdf" target="_blank">Hotel Victoria</a>
