Cambio platica plenario Ian Gol

--- a/views/program.html.twig
+++ b/views/program.html.twig
@@ -740,16 +740,18 @@
                                 <div class="panel-body">
                                     <h4>Ian Agol <br><small class="text-muted">Plenary Lecture PL 13</small></h4>
                                     <a data-toggle="collapse" href="#ianAgol" aria-expanded="false" aria-controls="ianAgol">
-                                        <strong>Coloring problems for maps on surfaces</strong>
+                                        <strong>The virtual fibration conjecture</strong>
                                     </a>
                                     <div class="collapse" id="ianAgol">
                                         <div class="well text-left">
-                                            We'll discuss colorings of certain sorts of maps on surfaces. The first case is quadrangulations of the
-                                            plane satisfying a combinatorial condition. We generalize a result that Penrose tilings (and more generally tilings
-                                            by parallelograms) are 3-colorable to this more general class of quadrangulations. The second question we'll
-                                            consider is whether maps on compact surfaces have a finite-sheeted cover which is 4-colorable. We'll describe some preliminary
-                                            results on this question, and explain a possible reduction to a question about measure-preserving actions of free
-                                            groups on colorings of a graph.
+                                            We'll discuss Thurston's conjecture
+                                            that hyperbolic manifolds admit a finite-sheeted
+                                            cover which fibers over the circle. We'll then
+                                            discuss some of the tools of geometric group
+                                            theory used to resolve this conjecture, combining
+                                            results of Kahn and Markovic and Wise and his
+                                            collaborators. We'll mention some related results
+                                            as well.
                                         </div>
                                     </div>
                                 </div>
